--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 3,
-    "version": "1.0",
-    "name": "Tab manager for chrome dev docs",
+    "author": "Florian Parra",
+    "version": "0.5",
+    "name": "Flat Screen Tab Manager",
     "icons": {
         "16": "images/icon-16.png",
         "32": "images/icon-32.png",
@@ -17,6 +18,20 @@
     ],
     "permissions": [
         "tabGroups"
+    ],
+    "background": {
+        "service_worker": "scripts/background.js"
+    },
+    "content_scripts": [
+        {
+            "js":[
+                "scripts/content.js"
+            ],
+            "run_at": "document_end",
+            "matches": [
+                "<all_urls>"
+            ]
+        }
     ]
 
 }
