--- a/manifest.json
+++ b/manifest.json
@@ -13,12 +13,11 @@
         "default_popup": "popup.html"
     },
     "host_permissions": [
-        "https://developer.chrome.com/*",
-        "https://fr.wikipedia.org/wiki/*",
-        "https://*/*"
+        "<all_urls>"
     ],
     "permissions": [
-        "tabGroups", 
+        "tabs",
+        "tabGroups",
         "scripting",
         "activeTab"
     ],
@@ -27,7 +26,7 @@
     },
     "content_scripts": [
         {
-            "js":[
+            "js": [
                 "src/content.js"
             ],
             "run_at": "document_idle",
@@ -36,5 +35,4 @@
             ]
         }
     ]
-
 }
