--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
             "js": [
                 "src/content.js"
             ],
-            "run_at": "document_idle",
+            "run_at": "document_end",
             "matches": [
                 "<all_urls>"
             ]
