--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
             ],
             "run_at": "document_end",
             "matches": [
-                "https://p.datadoghq.eu/*"
+                "<all_urls>"
             ]
         }
     ]
