keep service worker alive but last only 5 minutes

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
         "https://p.datadoghq.eu/*"
     ],
     "permissions": [
+        "offscreen",
         "tabs",
         "tabGroups",
         "scripting",
